# Flax-Functional

./: .gitignore  .ocamlformat  Makefile  README.md  dune-project  flax.opam  flax_core.opam  flax_parser.opam  flax_repl.opam  grammar.md  lib.opam
.github/workflows/: workflow.yml
doc/: desugar.md  grammar.md
lib/: alphaConverter.ml  alphaConverter.mli  closureConverter.ml  closureConverter.mli  constants.ml  coreGrammer.ml  coreProgram.ml  coreProgram.mli  cps.ml  cps.mli  cps1.ml  debug.ml  debug.mli  desugarar.ml  desugarar.mli  dune  enviroment.ml  enviroment.mli  freevarTransformer.ml  freevarTransformer.mli  interpreter.ml  interpreter.mli  lambdaLifter.ml  lambdaLifter.mli  lexer.ml  lexer.mli  lib.ml  parser.ml  parser.mli  token.ml  token.mli  utils.ml  value.ml
lib/enviroment/: dune  env.ml  env.mli  prims.ml
lib/environment/: dune  env.ml  env.mli
lib/grammar/: coreGrammar.ml  coreGrammar2.ml  dune
lib/grammer/: coreGrammer.ml  dune  sourceGrammer.ml
lib/parser/: Ast.ml  dune  lexer.mll  parser.mly  parserInterface.ml
lib/utils/: dune  generator.ml  generator.mli  listUtils.ml  listUtils.mli  utils.ml
test/: alphaConverterTest.ml  closureConverterTest.ml  cpsTest.ml  desugararTest.ml  display.ml  dune  enviromentTest.ml  freevarTransformerTest.ml  generatorTest.ml  interpreterTest.ml  lambdaLifterTest.ml  lexerTest.ml  parserTest.ml  structures.ml  testHelpers.ml  testPrograms.ml
test/Environment/: environmentTest.ml
test/programs/: basic.flax  fact.flax  factorial.flax  insort.flax
