opam-version: "0.1"
version: "0.1"
maintainer: "jschappel"
authors: ["Josh Schappel"]
homepage: "https://github.com/jschappel/L1"
bug-reports: "https://github.com/jschappel/L1/issues"
dev-repo: "git+https://github.com/jschappel/L1.git"
license: "Apache-2.0"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]