;; see https://github.com/gildor478/ounit/tree/master/examples for test examples

(include_subdirs unqualified)

(tests
 (names
  parserTest
  environmentTest
  desugararTest
  cpsTest
  generatorTest
  alphaConverterTest
  freevarTransformerTest)
 (action
  (run %{test}))
 ;-ci=true))
 (libraries ounit2 flax_core))

(env
 (dev
  (flags
   (:standard -warn-error -A))))
